--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing_gc = {git = "https://github.com/Grissess/tracing_gc", tag = "0.2.0"}
+tracing_gc = {git = "https://github.com/Grissess/tracing_gc", branch = "main"}
